# proyecto-si783-2026-i-u2-backup-restaurar-bd

./: .gitignore  Cargo.toml  Diccionario-de-Datos.md  Dockerfile  Estandar-de-Programacion.md  FD01-Informe-Factibilidad.md  FD02-Informe-Vision.md  FD03-Informe Especificación Requerimientos.md  FD04-Informe-Arquitectura-de-Software.md  FD05-Informe-Proyecto.md  INSTALACION.md  PLAN_API.md  README.md
.github/workflows/: cd.yml  ci.yml
Informes word/: FD01-EPIS-Informe de Factibilidad (1).docx  FD02-EPIS-Informe Vision.docx  FD03-EPIS-Informe Especificación Requerimientos (1).docx  FD04-EPIS-Informe Arquitectura de Software (1).docx
Presentacion/: presentacion.md
src/: api.rs  connections.rs  crypto.rs  db.rs  docker.rs  logs.rs  main.rs  models.rs  sandbox.rs
terraform/: main.tf  outputs.tf  variables.tf
tests/: bdd_tests.rs
