[package]
name = "safebridge-api"
version = "1.0.0"
description = "SafeBridge Headless API — Validador de Backups en Sandbox"
authors = ["SafeBridge Team"]
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.40.0", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.11.0"
hex = "0.4.3"

# Crypto (para contraseñas de conexiones)
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
